fixes spacing for new source order of basic results

--- a/css/screen.css
+++ b/css/screen.css
@@ -2724,7 +2724,7 @@ h2 {
 .result__item .result__title {
   line-height: 1.1;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .result__item .result__title a {
   color: #131313;
@@ -2750,6 +2750,7 @@ h2 {
   font-size: 12px;
   font-style: normal;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 @media (min-width: 768px) {
   .result__item .result__title a {
