--- a/sass/partials/search/_basic-results.scss
+++ b/sass/partials/search/_basic-results.scss
@@ -5,7 +5,7 @@
   .result__title {
     line-height: 1.1;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     a {
       color: #131313;
       font-size: 18px;
@@ -32,6 +32,7 @@
     font-size: 12px;
     font-style: normal;
     font-weight: bold;
+    margin-bottom: 10px;
   }
   @media (min-width: 768px) {
     .result__title a { font-size: 20px; }
